[gd_scene load_steps=7 format=3 uid="uid://ss1sawkk8lu3"]

[ext_resource type="Script" path="res://generation/image_mse/image_mse_cpu/image_mse_cpu.gd" id="1_6rawi"]
[ext_resource type="Texture2D" uid="uid://hxfxyni16ep1" path="res://art/test/target_test_960x540.png" id="2_6f0vo"]
[ext_resource type="Shader" path="res://shaders/abs_texture_difference.gdshader" id="3_3sbxx"]
[ext_resource type="Texture2D" uid="uid://chr5aofgwaads" path="res://art/test/source_test_960x540.png" id="3_63ipv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uiirf"]
resource_local_to_scene = true
shader = ExtResource("3_3sbxx")
shader_parameter/target_texture = ExtResource("2_6f0vo")
shader_parameter/current_texture = ExtResource("3_63ipv")

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_t2unk"]

[node name="ImageMSECPU" type="Node"]
script = ExtResource("1_6rawi")
_target_texture = ExtResource("2_6f0vo")
_current_texture = ExtResource("3_63ipv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ResultSubViewportContainer" type="SubViewportContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResultSubViewport" type="SubViewport" parent="CanvasLayer/ResultSubViewportContainer"]
handle_input_locally = false
size = Vector2i(960, 540)
render_target_update_mode = 4

[node name="ResultTextureRect" type="TextureRect" parent="CanvasLayer/ResultSubViewportContainer/ResultSubViewport"]
material = SubResource("ShaderMaterial_uiirf")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("PlaceholderTexture2D_t2unk")
